tests/script_errors/lexer_invalid_pp/error.txt
Error: 
    1 | #!this makes no sense!
      | ^^ Found the token `#!` but expected one of `!`, `"`, `$`, `(`, `+`, `-`, `<<`, `<doc-comment>`, `<ident>`, `<mod-comment>`, `[`, `absent`, `args`, `bool`, `const`, `drop`, `emit`, `event`, `float`, `fn`, `for`, `group`, `"""`, `int`, `intrinsic`, `let`, `match`, `merge`, `nil`, `not`, `patch`, `present`, `recur`, `state`, `use`, `window`, `{`
      |    NOTE: Did you mean to use `!`?
    2 | event